--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ Jinja2==2.10
 Werkzeug==0.12.2
 gunicorn==19.9.0
 Flask-PyMongo==2.2.0
+Splinter==0.10.0
+Pandas==0.23.4
+bs4==0.01
+selenium==3.14.0
+
