--- a/requirements.txt
+++ b/requirements.txt
@@ -5,8 +5,27 @@ Jinja2==2.10
 Werkzeug==0.12.2
 gunicorn==19.9.0
 Flask-PyMongo==2.2.0
-Splinter==0.10.0
+splinter==0.10.0
 Pandas==0.23.4
 bs4==0.0.1
 selenium==3.14.0
+
+appnope==0.1.0
+click==6.7
+decorator==4.1.2
+ipython==6.2.1
+ipython-genutils==0.2.0
+MarkupSafe==1.0
+parso==0.1.0
+passlib==1.7.1
+pexpect==4.3.0
+pickleshare==0.7.4
+prompt-toolkit==1.0.15
+ptyprocess==0.5.2
+Pygments==2.2.0
+simplegeneric==0.8.1
+six==1.11.0
+SQLAlchemy==1.1.15
+traitlets==4.3.2
+wcwidth==0.1.7
 
